--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,14 @@
 body {
   background-color: #F6FCFF;
   background-image: url("../images/home.jpg");
-  background-size: 500px;
-  background-position: top;
-  background-repeat: no-repeat;
+  background-size: contain; /* 이미지가 잘리지 않도록 비율 유지하면서 화면에 맞추기 */
+  background-position: center; /* 이미지를 중앙에 배치 */
+  background-repeat: no-repeat; /* 이미지를 반복하지 않음 */
   width: 100%;
+  height: 100vh; /* 화면 전체를 채우도록 설정 */
+  margin: 0; /* 기본 마진 제거 */
+  padding: 0; /* 기본 패딩 제거 */
+  overflow: hidden; /* 넘치는 콘텐츠 숨기기 */
 }
 .character {
   max-width: 364px;
