--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@ body {
   background-color: #F6FCFF;
   background-image: url("../images/home.jpg");
   background-size: contain; /* 이미지가 잘리지 않도록 비율 유지하면서 화면에 맞추기 */
-  background-position: center; /* 이미지를 중앙에 배치 */
+  background-position: top; /* 이미지를 중앙에 배치 */
   background-repeat: no-repeat; /* 이미지를 반복하지 않음 */
   width: 100%;
   height: 100vh; /* 화면 전체를 채우도록 설정 */
