--- a/css/home.css
+++ b/css/home.css
@@ -1,19 +1,74 @@
-body {
-  background-color: #F6FCFF;
-  background-image: url("../images/home.webp");
-  background-size: cover; /* 이미지가 잘리지 않도록 비율 유지하면서 화면에 맞추기 */
-  background-position: top; /* 이미지를 중앙에 배치 */
-  background-repeat: no-repeat; /* 이미지를 반복하지 않음 */
-  width: 100%;
-  height: 100vh; /* 화면 전체를 채우도록 설정 */
-  margin: 0; /* 기본 마진 제거 */
-  padding: 0; /* 기본 패딩 제거 */
-  overflow: hidden; /* 넘치는 콘텐츠 숨기기 */
+
+
+
+/* PC 일 떄 */
+@media only screen and (min-width: 500px) {
+  body {
+    width: 100%;
+    height: 100vh; /* 화면 전체를 채우도록 설정 */
+    margin: 0; /* 기본 마진 제거 */
+    padding: 0; /* 기본 패딩 제거 */
+    overflow: hidden; /* 넘치는 콘텐츠 숨기기 */
+  }
+  .character {
+    max-width: 364px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+  }
+
+  .img-container {
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .contents {
+    position: relative;
+  }
+
+  .home_background_image {
+    height: 100vh; /* 화면 전체를 채우도록 설정 */
+  }
 }
-.character {
-  max-width: 364px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 40px;
+
+/* MO 일 떄 */
+@media only screen and (max-width: 500px) {
+  body {
+    width: 100%;
+    height: 100vh; /* 화면 전체를 채우도록 설정 */
+    margin: 0; /* 기본 마진 제거 */
+    padding: 0; /* 기본 패딩 제거 */
+    overflow: hidden; /* 넘치는 콘텐츠 숨기기 */
+  }
+  .character {
+    max-width: 364px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+  }
+
+  .img-container {
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh; /* 화면 전체를 채우도록 설정 */
+    overflow: hidden;
+  }
+
+  .contents {
+    position: relative;
+    padding-top: 20px;
+  }
+
+  .home_background_image {
+    object-fit: cover;
+  }
+
 }
